fix(ui): prevent overflow in view page redesign

--- a/web/scss/view_redesign.scss
+++ b/web/scss/view_redesign.scss
@@ -2,7 +2,7 @@
 	main {
 		max-width: var(--layout-max-width);
 		display: grid !important;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 50%;
 		grid-template-rows: auto;
 		grid-auto-flow: row;
 		grid-template-areas:
